Fixed footer links on small screens

--- a/app/styles/modules/_UI-blocks.scss
+++ b/app/styles/modules/_UI-blocks.scss
@@ -7,6 +7,15 @@
 	display: flex;
 }
 
+@media (min-width: 30em) {
+	.ui-flx\@big {
+		display: -webkit-box;
+		display: -webkit-flex;
+		display: -ms-flexbox;
+		display: flex;
+	}
+}
+
 .ui-flx-wrap {
 	-webkit-flex-wrap: wrap;
 	-ms-flex-wrap: wrap;
@@ -79,6 +88,10 @@
 
 .ui-nln-b {
 	display: inline-block;
+}
+
+.ui-blck {
+	display: block;
 }
 
 .ui-brdr {
